--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@ ion-icon {
                     </div>
                 </a>
 
-                               
+                <a href="https://t.me/OnLy_HEIIFire" class="text-decoration-none  text-capitalize">
+                    <div class="insta-box link-box mt-3">
+                        JASA REKBER MARKET JB
+                    </div>
+                </a>              
 
                 <a href="https://marketjb.github.io" class="text-decoration-none  text-capitalize">
                     <div class="insta-box link-box mt-3">
